# EPG

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  pyproject.toml  sequenceDiagram.mmd
.github/workflows/: ci.yml  deploy.yml
scripts/: check_channel_programs.py  check_db.py  check_filter.py  check_overlaps.py  check_schema.py  check_us_channels.py  check_us_in_window.py  debug_parse.py  extract_channel.py  find_channels_with_programs.py  find_us_with_programs.py  init_db.py  remove_dump_code.py  search_program_title.py  show_channel.py  show_channel_by_id.py
src/epg_web/: __init__.py  main.py
src/epg_web/api/: routes.py
src/epg_web/epg/: parser.py
src/epg_web/models/: db.py  schemas.py
src/epg_web/services/: fetcher.py  storage.py
src/epg_web/static/css/: style.css
src/epg_web/static/js/: app.js
src/epg_web/templates/: index.html
