[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "epg_web"
version = "0.1.0"
description = "Electronic Program Guide (EPG) Web Service"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.17.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "xmltodict>=0.13.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.24.0",
    "black>=22.0.0",
    "isort>=5.0.0"
]

[tool.setuptools]
packages = ["epg_web"]
package-dir = {"" = "src"}